--- a/compose/pages/page_layout.html
+++ b/compose/pages/page_layout.html
@@ -903,7 +903,7 @@ fun LazyRowPreview(userData: UserData, modifier: Modifier = Modifier) {
             `
         },
          {
-            id: 13, src: 'https://raw.githubusercontent.com/pwraxe/compose/main/compose/images/output-lazy-grid-hr-1.png',
+            id: 13, src: 'https://raw.githubusercontent.com/pwraxe/compose/main/compose/images/output-lazy-grid-hr-1.jpg',
             description:
             `
 
