--- a/compose/notes.html
+++ b/compose/notes.html
@@ -19,6 +19,14 @@
     - When Create Model Class For LazyRow || LazyColumn (i.e. RecyclerView) make sure you annotate string with @StringRes val string:Int
     and drawableImage with @DrawableRes val drawableImage: Int, For Example,
     <pre>data class Affirmation(<b>@StringRes</b> val string:Int,<b>@DrawableRes</b> val image: Int)</pre>
+    <hr>
+    <p>
 
+        Color Picker : <a href="https://m3.material.io/theme-builder#/custom">Material Color Picker</a><br>
+        Color: #[ALPHA][<span style="color:red;">RED</span>][<span style="color:green;">GREEN</span>][<span style="color:blue;">BLUE</span>] = #[FF][80][00][88] = #FF800088
+        <br>
+        Alpha from <br>
+        #00(colorCode) = 0 % Opacity = Full Transparent <b>---to---></b> to #FF(colorCode) = 100% Opacity = No Transparent (Solid) <br>
+    </p>
 </body>
 </html>
