--- a/index.html
+++ b/index.html
@@ -55,7 +55,14 @@
         </div>
 
         <div class="card">
-            <a href="compose/pages/page_switch.html">
+            <a href="compose/pages/page_theme.html">
+                <h2>Theme</h2>
+                <p>Theme, Color, Shape, Type in Compose</p>
+            </a>
+        </div>
+
+        <div class="card">
+            <a href="compose/pages/page_test.html">
                 <h2>Test</h2>
                 <p>Functional and UI Tests compose</p>
             </a>
